<resources>
    <string name="app_name">Flight App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_call_permission_message">If you want to use this feature, you have to accept permission. Please accept this permission</string>
    <string name="alert_decline">Decline</string>
    <string name="alert_okay">Okay</string>
    <string name="musteri_vefat_etmistir">MUSTERI VEFAT ETMISTIR</string>
    <string name="could_not_calculate">Could not calculate</string>
    <string name="succesfully_logout">Succesfully Logout</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="internet_connection_needed">If you want to use this application, you need internet connection.</string>
    <string name="new_update">New Update</string>
    <string name="must_update">Application has a new version. If you want to use it, you have to update it.</string>
    <string name="wanna_update">Application has a new version. Do you want to update it ?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="close_application">Are you sure you want to close application ?</string>
    <string name="too_short">Too short</string>
    <string name="too_long">Too long</string>
    <string name="alert_call_title">Permission Required</string>
    <string name="flights">Flights</string>
    <string name="airports">Airports</string>
    <string name="flight_app">Flight App</string>
    <string name="find_your_best_flight">Find your best flight !</string>
    <string name="continue_button">CONTINUE</string>
    <string name="skip_button">Skip</string>
    <string name="flight_history">Flight History</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="login_button">Logın</string>
    <string name="or_divider">OR</string>
    <string name="sign_up">Sıgn Up</string>
    <string name="notification_text">Notification</string>
    <string name="title_text">Title</string>
    <string name="message_text">Message</string>
    <string name="send_notification">Send Notification</string>
    <string name="specific_notification">SPECIFIC NOTIFICATION</string>
    <string name="send">Send !</string>
    <string name="profile_screen">Profile</string>
    <string name="name_text">Name</string>
    <string name="surname_Text">Surname</string>
    <string name="update_text">Update</string>
    <string name="logout">Logout</string>
    <string name="send_notificaiton_button">Send Notıfıcatıon</string>
    <string name="travel">Travel</string>
    <string name="travel_world_easily">Travel world easily !</string>
    <string name="finish">FINISH</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="check_application">Hey! Check Application</string>
    <string name="select_date">Please Select Date</string>
    <string name="select_time">Please Select Time</string>
    <string name="successfully_created">Successfully Created</string>
    <string name="empty_blank">Empty !</string>
    <string name="any_internet_connection">There is any Internet Connection !</string>
    <string name="succesful_login">Succesfully Login !</string>
    <string name="changes_applied">Changes Applied</string>
    <string name="any_change">There is any change</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="change_language_of_your_applicaiton">Change Language of Your Applicaiton</string>
    <string name="something_went_wrong">Something went wrong :(</string>
    <string name="languages_string">Languages</string>
    <string name="alert_cancel">Cancel</string>
    <string name="language_turkish">Turkish</string>
    <string name="language_English">English</string>
    <string name="report">Report</string>
    <string name="please_write_your_complaint_to_here">Please write your complaint to here</string>
    <string name="add_an_image">Add An Image</string>
    <string name="empty_edittext">It could not be empty</string>
    <string name="succesfully_signup">Succesfully Signup !</string>
    <string name="succesfully_sent">Succesfully Sent</string>

    <string name="iamutkarshtiwari_github_io_ananas_no_images">There is no Image</string>
    <string name="iamutkarshtiwari_github_io_ananas_images">%d images</string>
    <string name="iamutkarshtiwari_github_io_ananas_done">Done</string>
    <string name="iamutkarshtiwari_github_io_ananas_apply">Apply</string>

    <string name="iamutkarshtiwari_github_io_ananas_stickers">Stickers</string>
    <string name="iamutkarshtiwari_github_io_ananas_filter">Filters</string>
    <string name="iamutkarshtiwari_github_io_ananas_crop">Crop</string>
    <string name="iamutkarshtiwari_github_io_ananas_rotate">Rotate</string>
    <string name="iamutkarshtiwari_github_io_ananas_text">Add Text</string>
    <string name="iamutkarshtiwari_github_io_ananas_brush">Brush</string>
    <string name="iamutkarshtiwari_github_io_ananas_eraser">Eraser</string>
    <string name="iamutkarshtiwari_github_io_ananas_edit">Edit</string>
    <string name="iamutkarshtiwari_github_io_ananas_brightness">Brightness</string>
    <string name="iamutkarshtiwari_github_io_ananas_saturation">Saturation</string>
    <string name="iamutkarshtiwari_github_io_ananas_size">Size</string>
    <string name="iamutkarshtiwari_github_io_ananas_opacity">Opacity</string>

    <string name="materialcolorpicker__errHex">Format code of hexadecimal is incorrect</string>
    <string name="materialcolorpicker__btnSelectColor">Select</string>
    <string name="iamutkarshtiwari_github_io_ananas_saving_image">Saving…</string>
    <string name="iamutkarshtiwari_github_io_ananas_input_hint">Enter here…</string>

    <string name="iamutkarshtiwari_github_io_ananas_not_selected">Not Selected</string>
    <string name="iamutkarshtiwari_github_io_ananas_auto_newline">New Line</string>
    <string name="iamutkarshtiwari_github_io_ananas_save_error">Saving Error!</string>
    <string name="iamutkarshtiwari_github_io_ananas_load_error">Loading Error l\'image!</string>
    <string name="iamutkarshtiwari_github_io_ananas_loading">Loading…</string>
    <string name="iamutkarshtiwari_github_io_ananas_pick_a_color">Pick a color</string>

    <string name="iamutkarshtiwari_github_io_ananas_free_size">FREE SIZE</string>
    <string name="iamutkarshtiwari_github_io_ananas_fit_image">ORIGINAL</string>
    <string name="iamutkarshtiwari_github_io_ananas_square">SQUARE</string>
    <string name="iamutkarshtiwari_github_io_ananas_ratio3_4" translatable="false">3:4</string>
    <string name="iamutkarshtiwari_github_io_ananas_ratio4_3" translatable="false">4:3</string>
    <string name="iamutkarshtiwari_github_io_ananas_ratio9_16" translatable="false">9:16</string>
    <string name="iamutkarshtiwari_github_io_ananas_ratio16_9" translatable="false">16:9</string>

    <string-array name="iamutkarshtiwari_github_io_ananas_filters">
        <item>Original</item>
        <item>Gentle</item>
        <item>Black</item>
        <item>Classic</item>
        <item>Wonderful</item>
        <item>Retro</item>
        <item>Grace</item>
        <item>Film</item>
        <item>Memory</item>
        <item>White</item>
        <item>Fleeting</item>
        <item>Sparkle</item>
    </string-array>

    <string-array name="iamutkarshtiwari_github_io_ananas_filter_drawable_list" translatable="false">
        <item>filter_1</item>
        <item>filter_2</item>
        <item>filter_3</item>
        <item>filter_4</item>
        <item>filter_5</item>
        <item>filter_6</item>
        <item>filter_7</item>
        <item>filter_8</item>
        <item>filter_9</item>
        <item>filter_10</item>
        <item>filter_11</item>
        <item>filter_12</item>
    </string-array>

    <string-array name="iamutkarshtiwari_github_io_ananas_types" translatable="false">
        <item>type1</item>
        <item>type2</item>
        <item>type3</item>
        <item>type4</item>
        <item>type5</item>
        <item>type6</item>
    </string-array>

    <string-array name="iamutkarshtiwari_github_io_ananas_type_names">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
        <item>Type 4</item>
        <item>Type 5</item>
        <item>Type 6</item>
    </string-array>

    <integer-array name="iamutkarshtiwari_github_io_ananas_type_count" translatable="false">
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>3</item>
        <item>5</item>
    </integer-array>

    <string name="iamutkarshtiwari_github_io_ananas_more">Plus</string>
    <string name="iamutkarshtiwari_github_io_ananas_exit_without_save">You will exit without save</string>
    <string name="iamutkarshtiwari_github_io_ananas_confirm">Confirm</string>
    <string name="iamutkarshtiwari_github_io_ananas_cancel">Cancel</string>

    <string name="iamutkarshtiwari_github_io_ananas_beauty">Beauty</string>
    <string name="iamutkarshtiwari_github_io_ananas_smooth">Smooth</string>
    <string name="iamutkarshtiwari_github_io_ananas_white_skin">Skin</string>
    <string name="iamutkarshtiwari_github_io_ananas_library_name">Image Edit</string>
    <string name="document_could_not_find">Ticket could not find. Please check code</string>

</resources>