<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.report.ReportFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/ic_toolbar_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/report"
        android:textColor="@color/white"
        android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutReport"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextReport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/please_write_your_complaint_to_here"
            android:lines="7" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageViewReport"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutReport" />

    <Button
        android:id="@+id/buttonSendReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/send"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutReport"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutReport"
        app:layout_constraintTop_toBottomOf="@+id/imageViewReport" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/add_an_image"
        app:layout_constraintBottom_toTopOf="@+id/imageViewReport"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutReport"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutReport"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutReport" />

</androidx.constraintlayout.widget.ConstraintLayout>